--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ngui/map": "0.30.3",
     "@types/googlemaps": "3.26.14",
     "ajv": "6.5.0",
+    "angular-cli": "^1.0.0-beta.28.3",
     "bootstrap": "4.1.0",
     "bootstrap-notify": "3.1.3",
     "bootstrap-select": "1.12.4",
