--- a/package.json
+++ b/package.json
@@ -59,11 +59,14 @@
     "easy-pie-chart": "2.1.7",
     "eonasdan-bootstrap-datetimepicker": "4.17.47",
     "fullcalendar": "3.4.0",
+    "html2canvas": "^1.0.0-rc.7",
     "jasny-bootstrap": "3.1.3",
     "jquery": "3.2.1",
+    "jspdf": "^2.1.1",
     "jvectormap": "2.0.4",
     "jw-bootstrap-switch-ng2": "1.0.10",
     "ngx-chips": "^1.9.2",
+    "ngx-spinner": "7.2.0",
     "nouislider": "9.2.0",
     "perfect-scrollbar": "^1.4.0",
     "popper.js": "1.14.1",
