--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "loadash": "^1.0.0",
     "moment": "^2.29.1",
     "ngx-chips": "^1.9.2",
+    "ngx-clipboard": "^12.3.0",
     "ngx-spinner": "7.2.0",
     "nouislider": "9.2.0",
     "perfect-scrollbar": "^1.4.0",
