--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -15,6 +15,9 @@
     "baseUrl": "",
     "types": []
   },
+  "angularCompilerOptions": {
+    "enableIvy": false
+  },
   "exclude": [
     "test.ts",
     "**/*.spec.ts"
