--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@agm/core": "1.0.0-beta.2",
     "@angular/animations": "11.2.4",
     "@angular/common": "11.2.4",
-    "@angular/compiler": "11.2.4",
     "@angular/core": "11.2.4",
     "@angular/forms": "11.2.4",
     "@angular/http": "6.0.4",
@@ -27,7 +26,7 @@
     "@angular/platform-browser-dynamic": "11.2.4",
     "@angular/router": "11.2.4",
     "@aspnet/signalr": "^1.1.4",
-    "@ng-bootstrap/ng-bootstrap": "^2.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@ngui/map": "0.30.3",
     "@ngx-loading-bar/router": "^5.1.0",
     "@types/googlemaps": "3.26.14",
@@ -83,9 +82,10 @@
     "zone.js": "0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.6.3",
-    "@angular/cli": "6.0.3",
-    "@angular/compiler-cli": "11.2.4",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "^6.0.3",
+    "@angular/compiler": "^11.2.4",
+    "@angular/compiler-cli": "^11.2.4",
     "@types/bootstrap": "3.3.32",
     "@types/chartist": "0.9.34",
     "@types/jasmine": "2.5.38",
