--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eonasdan-bootstrap-datetimepicker": "4.17.47",
     "firebase": "^8.2.10",
     "fullcalendar": "3.4.0",
+    "guid-typescript": "^1.0.9",
     "html2canvas": "^1.0.0-rc.7",
     "jasny-bootstrap": "3.1.3",
     "jquery": "3.2.1",
