--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
     "@ngui/map": "0.30.3",
     "@ngx-loading-bar/router": "^5.1.0",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
     "@types/googlemaps": "3.26.14",
     "ajv": "6.5.0",
     "angular-cli": "^1.0.0-beta.28.3",
@@ -68,13 +70,14 @@
     "jvectormap": "2.0.4",
     "jw-bootstrap-switch-ng2": "1.0.10",
     "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "ngx-chips": "^1.9.2",
     "ngx-spinner": "7.2.0",
     "nouislider": "9.2.0",
     "perfect-scrollbar": "^1.4.0",
     "popper.js": "1.14.1",
-    "rxjs": "6.6.6",
+    "rxjs": "^6.6.6",
     "rxjs-compat": "6.1.0",
     "sweetalert2": "7.22.0",
     "twitter-bootstrap-wizard": "1.2.0",
