--- a/package.json
+++ b/package.json
@@ -15,99 +15,101 @@
   },
   "private": true,
   "dependencies": {
+    "node-sass": "*",
     "@adactive/bootstrap-tagsinput": "0.8.2",
-    "@agm/core": "1.0.0-beta.2",
-    "@angular/animations": "11.2.4",
-    "@angular/common": "11.2.4",
-    "@angular/core": "11.2.4",
-    "@angular/forms": "11.2.4",
-    "@angular/http": "6.0.4",
-    "@angular/platform-browser": "11.2.4",
-    "@angular/platform-browser-dynamic": "11.2.4",
-    "@angular/router": "11.2.4",
+    "@agm/core": "3.0.0-beta.0",
+    "@angular/animations": "13.3.2",
+    "@angular/common": "13.3.2",
+    "@angular/core": "13.3.2",
+    "@angular/forms": "13.3.2",
+    "@angular/http": "7.2.16",
+    "@angular/platform-browser": "13.3.2",
+    "@angular/platform-browser-dynamic": "13.3.2",
+    "@angular/router": "13.3.2",
     "@aspnet/signalr": "^1.1.4",
-    "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^12.0.2",
     "@ngui/map": "0.30.3",
-    "@ngx-loading-bar/router": "^5.1.0",
-    "@ngx-translate/core": "^13.0.0",
-    "@ngx-translate/http-loader": "^6.0.0",
-    "@types/googlemaps": "3.26.14",
-    "ajv": "6.5.0",
+    "@ngx-loading-bar/router": "^6.0.2",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
+    "@types/googlemaps": "3.43.3",
+    "ajv": "8.11.0",
     "angular-cli": "^1.0.0-beta.28.3",
-    "angular-notifier": "^6.0.1",
-    "bootstrap": "4.1.0",
+    "angular-notifier": "^11.0.0",
+    "bootstrap": "5.1.3",
     "bootstrap-notify": "^3.1.3",
-    "bootstrap-select": "1.12.4",
+    "bootstrap-select": "1.13.18",
     "bootstrap-tagsinput": "0.7.1",
-    "chart.js": "2.7.2",
-    "chartist": "0.11.0",
-    "chartist-plugin-zoom": "0.4.0",
-    "chartjs-plugin-zoom": "0.5.0",
-    "core-js": "2.4.1",
-    "country-list": "^2.1.1",
-    "datatables": "1.10.12",
-    "datatables.net": "^1.10.19",
-    "datatables.net-bs": "1.10.12",
-    "datatables.net-bs4": "^1.10.19",
-    "datatables.net-colreorder": "^1.5.1",
-    "datatables.net-colreorder-bs4": "^1.5.1",
-    "datatables.net-fixedcolumns": "^3.2.6",
-    "datatables.net-fixedcolumns-bs4": "^3.2.6",
-    "datatables.net-fixedheader-bs4": "^3.1.5",
-    "datatables.net-responsive": "2.1.1",
-    "datatables.net-responsive-bs4": "^2.2.3",
-    "datatables.net-rowgroup-bs4": "^1.0.3",
-    "datatables.net-scroller-bs4": "^1.5.1",
-    "datatables.net-select-bs4": "^1.2.7",
+    "chart.js": "3.7.1",
+    "chartist": "0.11.4",
+    "chartist-plugin-zoom": "0.6.0",
+    "chartjs-plugin-zoom": "1.2.1",
+    "core-js": "3.21.1",
+    "country-list": "^2.2.0",
+    "datatables": "1.10.18",
+    "datatables.net": "^1.11.5",
+    "datatables.net-bs": "1.11.5",
+    "datatables.net-bs4": "^1.11.5",
+    "datatables.net-colreorder": "^1.5.5",
+    "datatables.net-colreorder-bs4": "^1.5.5",
+    "datatables.net-fixedcolumns": "^4.0.2",
+    "datatables.net-fixedcolumns-bs4": "^4.0.2",
+    "datatables.net-fixedheader-bs4": "^3.2.2",
+    "datatables.net-responsive": "2.2.9",
+    "datatables.net-responsive-bs4": "^2.2.9",
+    "datatables.net-rowgroup-bs4": "^1.1.4",
+    "datatables.net-scroller-bs4": "^2.0.5",
+    "datatables.net-select-bs4": "^1.3.4",
     "easy-pie-chart": "2.1.7",
-    "eonasdan-bootstrap-datetimepicker": "4.17.47",
-    "firebase": "^8.2.10",
-    "flag-icon-css": "^3.5.0",
-    "fullcalendar": "3.4.0",
+    "eonasdan-bootstrap-datetimepicker": "4.17.49",
+    "firebase": "^9.6.10",
+    "flag-icon-css": "^4.1.7",
+    "fullcalendar": "5.11.0",
     "guid-typescript": "^1.0.9",
-    "html2canvas": "^1.0.0-rc.7",
-    "jasny-bootstrap": "3.1.3",
-    "jquery": "3.2.1",
-    "jspdf": "^2.1.1",
+    "html2canvas": "^1.4.1",
+    "jasny-bootstrap": "4.0.0",
+    "jquery": "3.6.0",
+    "jspdf": "^2.5.1",
     "jvectormap": "2.0.4",
-    "jw-bootstrap-switch-ng2": "1.0.10",
+    "jw-bootstrap-switch-ng2": "2.0.5",
     "loadash": "^1.0.0",
     "lodash": "^4.17.21",
-    "moment": "^2.29.1",
-    "ngx-chips": "^1.9.2",
-    "ngx-mat-drm-countries-flags": "^3.0.0",
-    "ngx-spinner": "7.2.0",
-    "nouislider": "9.2.0",
-    "perfect-scrollbar": "^1.4.0",
-    "popper.js": "1.14.1",
-    "rxjs": "^6.6.6",
-    "rxjs-compat": "6.1.0",
-    "sweetalert2": "7.22.0",
+    "moment": "^2.29.2",
+    "ngx-chips": "^3.0.0",
+    "ngx-mat-drm-countries-flags": "^3.0.1",
+    "ngx-spinner": "13.1.1",
+    "nouislider": "15.5.1",
+    "perfect-scrollbar": "^1.5.5",
+    "popper.js": "1.16.1",
+    "rxjs": "^7.5.5",
+    "rxjs-compat": "6.6.7",
+    "sweetalert2": "^11.4.8",
     "twitter-bootstrap-wizard": "1.2.0",
-    "web-animations-js": "2.3.1",
-    "zone.js": "0.11.4"
+    "web-animations-js": "2.3.2",
+    "zone.js": "0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.9",
-    "@angular/cli": "^6.0.3",
-    "@angular/compiler": "^11.2.4",
-    "@angular/compiler-cli": "^11.2.4",
-    "@types/bootstrap": "3.3.32",
-    "@types/chartist": "0.9.34",
-    "@types/jasmine": "2.5.38",
-    "@types/node": "6.0.73",
-    "codelyzer": "4.3.0",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "3.2.0",
-    "karma": "2.0.2",
-    "karma-chrome-launcher": "2.0.0",
-    "karma-cli": "1.0.1",
-    "karma-coverage-istanbul-reporter": "0.2.0",
-    "karma-jasmine": "1.1.0",
-    "karma-jasmine-html-reporter": "0.2.2",
-    "protractor": "5.3.2",
-    "ts-node": "2.0.0",
-    "tslint": "5.9.1",
-    "typescript": "4.1.5"
+    "@angular-devkit/build-angular": "^13.3.2",
+    "@angular/cli": "^13.3.2",
+    "@angular/compiler": "^13.3.2",
+    "@angular/compiler-cli": "^13.3.2",
+    "@types/bootstrap": "5.1.9",
+    "@types/chartist": "0.11.1",
+    "@types/jasmine": "4.0.2",
+    "@types/node": "17.0.23",
+    "codelyzer": "6.0.2",
+    "jasmine-core": "4.0.1",
+    "node-sass": "*",
+    "jasmine-spec-reporter": "7.0.0",
+    "karma": "6.3.17",
+    "karma-chrome-launcher": "3.1.1",
+    "karma-cli": "2.0.0",
+    "karma-coverage-istanbul-reporter": "3.0.3",
+    "karma-jasmine": "4.0.2",
+    "karma-jasmine-html-reporter": "1.7.0",
+    "protractor": "7.0.0",
+    "ts-node": "10.7.0",
+    "tslint": "6.1.3",
+    "typescript": "4.6.3"
   }
 }
